# tech-sprint

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  package-lock.json  pyproject.toml  requirements.lock.txt
.github/workflows/: ci.yml  python.yml  release.yml
docs/: anchors.md  architecture.md  broadcast_audit_latest.md  ffmpeg_demo_notes.md  maintainer_review.md  pipeline.md  pro_best_practices_review.md  qc_report.md  qc_sync_investigation.md  run_manifest.md  run_schema.json  subtitle_safe_area.md
fixtures/qc_golden/6d230829f62a/: captions.ass  captions.srt  qc_report.json
scripts/: qc_report.py
src/techsprint/: __init__.py  _version.py  demo.py  exceptions.py  pipeline.py
src/techsprint/anchors/: __init__.py  base.py  tech.py
src/techsprint/cli/: main.py
src/techsprint/config/: defaults.py  settings.py
src/techsprint/core/: anchor.py  artifacts.py  job.py  workspace.py
src/techsprint/domain/: artifacts.py  contracts.py  job.py  workspace.py
src/techsprint/prompts/: base.py  tech.py
src/techsprint/renderers/: __init__.py  base.py  reels.py  tiktok.py  youtube.py
src/techsprint/schemas/: __init__.py
src/techsprint/services/: audio.py  broadcast_contract.py  compose.py  news.py  script.py  subtitles.py  tts.py  video.py
src/techsprint/utils/: checks.py  diagnostics.py  doctor.py  ffmpeg.py  logging.py  manifest.py  qc.py  run_schema.json  text.py  timing.py
tests/: conftest.py  test_anchor_render.py  test_cli_demo.py  test_cli_errors.py  test_cli_run.py  test_cli_runs.py  test_compose_duration_alignment.py  test_compose_service.py  test_demo_audio.py  test_doctor.py  test_exceptions.py  test_ffmpeg_utils.py  test_manifest_schema.py  test_pipeline_ffmpeg_integration.py  test_pipeline_smoke.py  test_pipeline_unit.py  test_prompt_language.py  test_qc.py  test_qc_caption_metrics.py  test_run_manifest.py  test_subtitle_constraints.py  test_subtitle_mismatch_guard.py  test_subtitle_sanitizer.py  test_subtitles_text_fallback.py  test_workspace.py
tests/cli/: test_cli_demo.py  test_cli_render.py  test_cli_run.py  test_cli_runs.py  test_cli_voices.py
tests/fixtures/: script_sample.txt
tests/integration/: test_pipeline_smoke.py
tests/unit/: test_broadcast_contract.py  test_demo_audio.py  test_diagnostics.py  test_ffmpeg_utils.py  test_qc_caption_metrics.py  test_qc_drift.py  test_qc_strict_pass.py  test_qc_style.py  test_run_manifest.py  test_script_sanitizer.py  test_subtitle_layout.py  test_subtitle_postprocess_qc_guards.py  test_subtitle_sanitizer.py  test_subtitle_script_source.py  test_subtitles_asr.py  test_verbatim_contract.py  test_verbatim_pipeline.py  test_version.py
