[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "techsprint"
version = "0.1.0"
description = "TechSprint: configuration-driven, multi-anchor short-form video pipeline."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "KusseTech Studio" }]

dependencies = [
  "typer>=0.12.3",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "feedparser>=6.0.11",
  "edge-tts>=7.2.7",
  "openai>=2.14.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23.8",
  "pytest-mock>=3.14.0",
  "ruff>=0.8.0",
  "mypy>=1.10",
]

[project.scripts]
techsprint = "techsprint.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/techsprint"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = ["-q"]
markers = [
  "integration: tests that require external services or system dependencies",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
