[build-system]
requires = ["hatchling>=1.25.0", "hatch-vcs>=0.4.0"]
build-backend = "hatchling.build"

[project]
name = "techsprint"
dynamic = ["version"]
description = "TechSprint: configuration-driven, multi-anchor short-form video pipeline."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "KusseTech Studio" }]

dependencies = [
  "typer>=0.12.3",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "feedparser>=6.0.11",
  "edge-tts>=7.2.7",
  "openai>=2.14.0",
  "faster-whisper>=0.10.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23.8",
  "pytest-mock>=3.14.0",
  "ruff>=0.8.0",
  "mypy>=1.10",
]

[project.scripts]
techsprint = "techsprint.cli.main:app"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/techsprint/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/techsprint"]
exclude = [
  "/.trunk",
  "/.trunk/**",
  "/.techsprint",
  "/.techsprint/**",
  "/.uv-cache",
  "/.uv-cache/**",
]

[tool.hatch.build.targets.sdist]
exclude = [
  "/.trunk",
  "/.trunk/**",
  "/.techsprint",
  "/.techsprint/**",
  "/.uv-cache",
  "/.uv-cache/**",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = ["-q"]
markers = [
  "integration: tests that require external services or system dependencies",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
